description section | fixes

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </nav>
 
         <section class="intro-section">
+
     <div class="intro-header">
         <div class="profile-container">
             <img src="assets/aadishjain.jpg" alt="Aadish Jain" class="profile-pic">
@@ -34,13 +35,16 @@
         </div>
         <div class="intro-details">
             <h1>Hey, I'm Aadish (aa•deesh) 👋</h1>
-            <p class="status"><span class="status-dot"></span>Available for work</p>
+            <p class="status">
+                <span class="status-dot"></span>Available for work
+            </p>
         </div>
     </div>
     
     <p class="bio">
         I'm a creative software developer specializing in UI design and crafting engaging user experiences with great attention to detail.
     </p>
+
 </section>
 
         <section class="skills-section">
