--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@
         </section>
 
         <section class="projects-section">
-            <div class="section-header">
-                <h2>featured projects</h2>
+            <div class="section-header">projects
                 <a href="#" class="view-more-link">view more →</a>
             </div>
 
