redesigned introduction section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="styles/navbar.css">
     <link rel="stylesheet" href="styles/intro.css">
     <link rel="stylesheet" href="styles/skills.css">
-    <link rel="stylesheet" href="styles/bio.css">
     <link rel="stylesheet" href="styles/experience.css">
     <link rel="stylesheet" href="styles/projects.css">
 
@@ -39,42 +38,32 @@
     </div>
 </nav>
 
-        <section class="intro-section">
-
-            <div class="intro-header">
-                <div class="profile-container">
-                    <img src="assets/aadishjain.png" alt="Aadish Jain" class="profile-pic">
-                    <img src="assets/glasses.png" alt="Thug Glasses" class="hover-image glasses">
-                </div>
-                <div class="intro-details">
-                    <h2>
-                        Hey, I'm iOS Developer,
-                    </h2>
-                    <h1>Aadish (aa•dee•sh)
-                        <span class="wave-emoji">👋</span>
-                    </h1>
-
-                    <a href="mailto:aadishhere@gmail.com" class="status-link">
-                        <div class="status-text-container">
-
-                            <div class="status-text default-text">
-                                <span class="status-dot"></span>
-                                <span>available for work</span>
-                            </div>
-                            <div class="status-text hover-text">
-                                <span>reach out ↗️</span>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-        </section>
-
-        <section class="bio-section">
-            <p class="bio">
-                I'm a creative iOS developer specializing in UI design and crafting engaging user experiences with a
+<section class="intro-section">
+    <div class="intro-text-content">
+        <h1 class="intro-heading">Hey, I'm Aadish (aa•dee•sh) <span class="wave-emoji">👋</span></h1>
+        <p class="intro-subtitle">iOS developer from 🇮🇳 India</p>
+        <p class="intro-bio">
+            I'm a creative iOS developer specializing in UI design and crafting engaging user experiences with a
                 little attention to detail.
-            </p>
-        </section>
+        </p>
+        <div class="intro-links">
+            <a href="#" class="text-link-button">
+                <i class="fa-solid fa-download"></i>
+                <span>Resume</span>
+            </a>
+            <a href="mailto:aadishhere@gmail.com" class="text-link-button" title="Email Me"><i class="fa-solid fa-envelope"></i>
+            <span>Email Me</span>
+            </a>
+        </div>
+    </div>
+
+    <div class="intro-image-container">
+        <div class="profile-container">
+            <img src="assets/aadishjain.png" alt="Aadish Jain" class="profile-pic">
+            <img src="assets/glasses.png" alt="Thug Glasses" class="hover-image glasses">
+        </div>
+    </div>
+</section>
 
 
         <section class="skills-section">
