--- a/index.html
+++ b/index.html
@@ -12,59 +12,57 @@
     <link rel="stylesheet" href="styles/skills.css">
     <link rel="stylesheet" href="styles/experience.css">
     <link rel="stylesheet" href="styles/projects.css">
+    <link rel="stylesheet" href="styles/footer.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-
-    <script src="js/skills.js"></script>
-    <script src="js/experience.js"></script>
 </head>
 
 <body>
-
     <div class="container">
+
         <nav class="navbar">
-    <div class="page-links">
-        <a href="#">home</a>
-        <a href="#">blog</a>
-        <a href="#">projects</a>
-    </div>
+            <div class="page-links">
+                <a href="#">home</a>
+                <a href="#">blog</a>
+                <a href="#">projects</a>
+            </div>
 
-    <div class="social-links">
-        <a href="https://github.com/your-username" target="_blank"><i class="fa-brands fa-github"></i></a>
-        <a href="https://linkedin.com/in/your-username" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="https://x.com/your-username" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-        <i class="fa-regular fa-moon theme-icon"></i>
-    </div>
-</nav>
+            <div class="social-links">
+                <a href="https://github.com/your-username" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://linkedin.com/in/your-username" target="_blank"><i
+                        class="fa-brands fa-linkedin"></i></a>
+                <a href="https://x.com/your-username" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <i class="fa-regular fa-moon theme-icon"></i>
+            </div>
+        </nav>
 
-<section class="intro-section">
-    <div class="intro-text-content">
-        <h1 class="intro-heading">Hey, I'm Aadish (aa•dee•sh) <span class="wave-emoji">👋</span></h1>
-        <p class="intro-subtitle">iOS developer from 🇮🇳 India</p>
-        <p class="intro-bio">
-            I'm a creative iOS developer specializing in UI design and crafting engaging user experiences with a
-                little attention to detail.
-        </p>
-        <div class="intro-links">
-            <a href="#" class="text-link-button">
-                <i class="fa-solid fa-download"></i>
-                <span>Resume</span>
-            </a>
-            <a href="mailto:aadishhere@gmail.com" class="text-link-button" title="Email Me"><i class="fa-solid fa-envelope"></i>
-            <span>Email Me</span>
-            </a>
-        </div>
-    </div>
-
-    <div class="intro-image-container">
-        <div class="profile-container">
-            <img src="assets/aadishjain.png" alt="Aadish Jain" class="profile-pic">
-            <img src="assets/glasses.png" alt="Thug Glasses" class="hover-image glasses">
-        </div>
-    </div>
-</section>
-
+        <section class="intro-section">
+            <div class="intro-text-content">
+                <h1 class="intro-heading">Hey, I'm Aadish (aa•dee•sh) <span class="wave-emoji">👋</span></h1>
+                <p class="intro-subtitle">iOS developer from 🇮🇳 India</p>
+                <p class="intro-bio">
+                    I'm a creative iOS developer specializing in UI design and crafting engaging user experiences with a
+                    little attention to detail.
+                </p>
+                <div class="intro-links">
+                    <a href="#" class="text-link-button">
+                        <i class="fa-solid fa-download"></i>
+                        <span>Resume</span>
+                    </a>
+                    <a href="mailto:aadishhere@gmail.com" class="text-link-button" title="Email Me"><i
+                            class="fa-solid fa-envelope"></i>
+                        <span>Email Me</span>
+                    </a>
+                </div>
+            </div>
+            <div class="intro-image-container">
+                <div class="profile-container">
+                    <img src="assets/aadishjain.png" alt="Aadish Jain" class="profile-pic">
+                    <img src="assets/glasses.png" alt="Thug Glasses" class="hover-image glasses">
+                </div>
+            </div>
+        </section>
 
         <section class="skills-section">
             <div class="section-heading">Skills</div>
@@ -214,45 +212,30 @@
             </div>
 
             <div class="projects-grid">
-                <div class="project-card">
-                    <img src="assets/sampleimage.png" alt="Project Thumbnail" class="project-thumbnail">
-                    <div class="project-info">
-                        <h3 class="project-title">Project 1</h3>
-                        <p class="project-description">
-                        Project 1 Description    
-                        </p>
-                        <div class="project-tags">
-                            <span class="tech-tag">ARKit</span>
-                            <span class="tech-tag">REST Api</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="project-link-button"><i class="fa-brands fa-github"></i>Source</a>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="project-card">
-                    <img src="assets/sampleimage.png" alt="Project Thumbnail" class="project-thumbnail">
-                    <div class="project-info">
-                        <h3 class="project-title">Project 2</h3>
-                        <p class="project-description">
-                            Project 2 Description
-                        </p>
-                        <div class="project-tags">
-                            <span class="tech-tag">MapKit</span>
-                            <span class="tech-tag">CoreData</span>
-                            <span class="tech-tag">Firebase</span>
-                        </div>
-                        <div class="project-links">
-                             <a href="#" class="project-link-button"><i class="fa-brands fa-github"></i>Source</a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
-
+        <footer class="footer">
+            <div class="footer-content">
+                <div class="footer-left">
+                    <p>© 2025 Aadish Jain</p>
+                </div>
+                <div class="footer-right">
+                    <p>Last updated on August 5, 2025</p>
+                </div>
+            </div>
+        </footer>
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-firestore-compat.js"></script>
+
+    <script src="js/firebase-config.js"></script>
+
+    <script src="js/main.js"></script>
+
+    <script src="js/skills.js"></script>
+    <script src="js/experience.js"></script>
 </body>
 
 </html>
