--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     <link rel="stylesheet" href="styles/main.css">
 
     <link rel="preload" fetchpriority="high" as="image" href="assets/aadishjain.webp" type="image/webp">
+    
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" as="style">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
     
     <link rel="preload" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css" as="style">
     <link href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css" rel="stylesheet" media="print" onload="this.media='all'">
 
-    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" as="style">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" media="print" onload="this.media='all'">
+<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" as="style">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" media="print" onload="this.media='all'">
 </head>
 
 <body>
@@ -296,6 +297,7 @@
 
 <script src="js/skills.js"></script>
 <script src="js/experience.js"></script>
+    <script src="https://kit.fontawesome.com/ab21585358.js" crossorigin="anonymous"></script>
 
 </body>
 
