--- a/index.html
+++ b/index.html
@@ -24,19 +24,18 @@
     <div class="container">
 
         <nav class="navbar">
-            <div class="page-links">
-                <a href="#">home</a>
-                <a href="#">blog</a>
-                <a href="#">projects</a>
-            </div>
-            <div class="social-links">
-                <a href="https://github.com/your-username" target="_blank"><i class="fa-brands fa-github"></i></a>
-                <a href="https://linkedin.com/in/your-username" target="_blank"><i
-                        class="fa-brands fa-linkedin"></i></a>
-                <a href="https://x.com/your-username" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <i class="fa-regular fa-moon theme-icon"></i>
-            </div>
-        </nav>
+    <div class="page-links">
+        <a href="#">home</a>
+        <a href="#">blog</a>
+        <a href="#">projects</a>
+    </div>
+    <div class="social-links">
+        <a href="https://github.com/aadishhere" target="_blank" aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
+        <a href="https://linkedin.com/in/aadishhere" target="_blank" aria-label="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://instagram.com/aadishhere" target="_blank" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+        <i class="fa-regular fa-moon theme-icon"></i>
+    </div>
+</nav>
 
         <section class="intro-section">
             <div class="intro-text-content">
