--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </section>
 
         <section class="skills-section">
-            <h2 class="section-heading">Skills</h2>
+            <h2 class="section-header-title">Skills</h2>
             <div class="skills-container">
                 <div class="skills-grid">
 
