--- a/index.html
+++ b/index.html
@@ -34,6 +34,55 @@
       }
     }
     </script>
+
+
+        <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "mainEntity": {
+    "@type": "Person",
+    "name": "Aadish Jain",
+    "url": "https://www.aadishjain.com",
+    "image": {
+      "@type": "ImageObject",
+      "url": "https://www.aadishjain.com/assets/aadishjain.webp",
+      "height": "300",
+      "width": "300"
+    },
+    "jobTitle": "Writer, Author, Poet, Software Engineer, iOS Developer",
+    "description": Aadish Jain is a writer from Indore and a engineer with a passion for iOS development and building innovative products. He’s also working toward launching his own watch company.",
+    "nationality": "Indian",
+    "knowsLanguage": ["English", "Hindi"],
+    "alumniOf": {
+      "@type": "CollegeOrUniversity",
+      "name": "IPS Academy, Institute of Engineering and Science",
+      "sameAs": "https://ies.ipsacademy.org"
+    },
+    "sameAs": [
+      "https://github.com/aadishhere",
+      "https://linkedin.com/in/aadishhere",
+      "https://instagram.com/aadishhere",
+      "https://www.amazon.in/stores/author/B0BV14D8KJ",
+      "https://www.imdb.com/name/nm14537099/bio/",
+      "https://share.google/HcbRcRpbVGjru4HNi"
+    ],
+    "knowsAbout": [
+      "Poetry", "Writing", "iOS Developement", "iOS App", "Spirituality", 
+      "Song Writing", "App Development", "Indore", "Software Engineer"
+    ],
+    "publication": [
+      {
+        "@type": "Book",
+        "name": "The Kala's Of Shri Krishna",
+        "author": { "@type": "Person", "name": "Aadish Jain" },
+        "url": "https://amzn.in/d/4KaZA9e",
+        "isbn": "B0C5VY39KR"
+      }
+    ]
+  }
+}
+</script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
