--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 
     <script src="js/skills.js"></script>
     <script src="js/experience.js"></script>
-    <script src="js/theme.js"></script> <script src="https://kit.fontawesome.com/ab21585358.js" crossorigin="anonymous" defer></script>
+    <script src="js/theme.js"></script>
 
     <script src="https://kit.fontawesome.com/ab21585358.js" crossorigin="anonymous" defer></script>
 </body>
