--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             content="The personal portfolio of Aadish Jain, a creative iOS developer from Indore, India, specializing in building engaging mobile user experiences with Swift and SwiftUI.">
 
         <meta name="keywords"
-            content="Aadish Jain, iOS Developer, Swift, SwiftUI, Mobile App Developer, Portfolio, Indore">\
+            content="Aadish Jain, iOS Developer, Swift, SwiftUI, Mobile App Developer, Portfolio, Indore">
 
         <script type="application/ld+json">
 {
