--- a/blog.html
+++ b/blog.html
@@ -20,6 +20,7 @@
 
         </div>
 
-    <script src="js/blog.js" type="module"></script> </body>
+    <script src="js/blog.js" type="module"></script>
+</body>
 
 </html>
