--- a/index.html
+++ b/index.html
@@ -280,6 +280,30 @@
             </div>
         </section>
 
+        <section class="gallery-section">
+            <h2 class="section-header-title">gallery</h2>
+            <div class="photo-grid">
+                <div class="photo-card">
+                    <img src="https://via.placeholder.com/300" alt="Description of photo 1">
+                    <div class="photo-overlay">
+                        <p class="photo-caption">A cool caption</p>
+                    </div>
+                </div>
+                <div class="photo-card">
+                    <img src="https://via.placeholder.com/300" alt="Description of photo 2">
+                     <div class="photo-overlay">
+                        <p class="photo-caption">Another caption</p>
+                    </div>
+                </div>
+                <div class="photo-card">
+                    <img src="https://via.placeholder.com/300" alt="Description of photo 3">
+                     <div class="photo-overlay">
+                        <p class="photo-caption">More photos</p>
+                    </div>
+                </div>
+                </div>
+        </section>
+
         <footer class="footer">
             <div class="footer-content">
                 <div class="footer-left">
