--- a/index.html
+++ b/index.html
@@ -285,23 +285,59 @@
             <div class="photo-grid">
                 <div class="photo-card">
                     <img src="https://via.placeholder.com/300" alt="Description of photo 1">
-                    <div class="photo-overlay">
-                        <p class="photo-caption">A cool caption</p>
+                    <div class="photo-card-overlay">
+                        <div class="photo-stats">
+                            <i class="fa-solid fa-heart"></i>
+                            <span>12</span>
+                        </div>
                     </div>
                 </div>
                 <div class="photo-card">
                     <img src="https://via.placeholder.com/300" alt="Description of photo 2">
-                     <div class="photo-overlay">
-                        <p class="photo-caption">Another caption</p>
+                     <div class="photo-card-overlay">
+                        <div class="photo-stats">
+                            <i class="fa-solid fa-heart"></i>
+                            <span>42</span>
+                        </div>
                     </div>
                 </div>
                 <div class="photo-card">
                     <img src="https://via.placeholder.com/300" alt="Description of photo 3">
-                     <div class="photo-overlay">
-                        <p class="photo-caption">More photos</p>
+                     <div class="photo-card-overlay">
+                        <div class="photo-stats">
+                            <i class="fa-solid fa-heart"></i>
+                            <span>7</span>
+                        </div>
                     </div>
                 </div>
+                <div class="photo-card">
+                    <img src="https://via.placeholder.com/300" alt="Description of photo 4">
+                     <div class="photo-card-overlay">
+                        <div class="photo-stats">
+                            <i class="fa-solid fa-heart"></i>
+                            <span>28</span>
+                        </div>
+                    </div>
                 </div>
+                <div class="photo-card">
+                    <img src="https://via.placeholder.com/300" alt="Description of photo 5">
+                     <div class="photo-card-overlay">
+                        <div class="photo-stats">
+                            <i class="fa-solid fa-heart"></i>
+                            <span>15</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="photo-card">
+                    <img src="https://via.placeholder.com/300" alt="Description of photo 6">
+                     <div class="photo-card-overlay">
+                        <div class="photo-stats">
+                            <i class="fa-solid fa-heart"></i>
+                            <span>99+</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <footer class="footer">
