--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <h2 class="section-header-title">gallery</h2>
             <div class="photo-grid">
                 <div class="photo-card">
-                    <img src="https://via.placeholder.com/300" alt="Description of photo 1">
+                    <img src="assets/sampleimage.webp" alt="Description of photo 1">
                     <div class="photo-card-overlay">
                         <div class="photo-stats">
                             <i class="fa-solid fa-heart"></i>
@@ -293,7 +293,7 @@
                     </div>
                 </div>
                 <div class="photo-card">
-                    <img src="https://via.placeholder.com/300" alt="Description of photo 2">
+                    <img src="assets/sampleimage.webp" alt="Description of photo 2">
                      <div class="photo-card-overlay">
                         <div class="photo-stats">
                             <i class="fa-solid fa-heart"></i>
@@ -302,7 +302,7 @@
                     </div>
                 </div>
                 <div class="photo-card">
-                    <img src="https://via.placeholder.com/300" alt="Description of photo 3">
+                    <img src="assets/sampleimage.webp/300" alt="Description of photo 3">
                      <div class="photo-card-overlay">
                         <div class="photo-stats">
                             <i class="fa-solid fa-heart"></i>
@@ -311,7 +311,7 @@
                     </div>
                 </div>
                 <div class="photo-card">
-                    <img src="https://via.placeholder.com/300" alt="Description of photo 4">
+                    <img src="assets/sampleimage.webp/300" alt="Description of photo 4">
                      <div class="photo-card-overlay">
                         <div class="photo-stats">
                             <i class="fa-solid fa-heart"></i>
@@ -320,7 +320,7 @@
                     </div>
                 </div>
                 <div class="photo-card">
-                    <img src="https://via.placeholder.com/300" alt="Description of photo 5">
+                    <img src="assets/sampleimage.webp/300" alt="Description of photo 5">
                      <div class="photo-card-overlay">
                         <div class="photo-stats">
                             <i class="fa-solid fa-heart"></i>
@@ -329,7 +329,7 @@
                     </div>
                 </div>
                 <div class="photo-card">
-                    <img src="https://via.placeholder.com/300" alt="Description of photo 6">
+                    <img src="assets/sampleimage.webp/300" alt="Description of photo 6">
                      <div class="photo-card-overlay">
                         <div class="photo-stats">
                             <i class="fa-solid fa-heart"></i>
