--- a/index.html
+++ b/index.html
@@ -107,21 +107,10 @@
             <div class="intro-text-content">
                 <h1 class="intro-heading">Hey, I'm Aadish (aa•dee•sh) <span class="wave-emoji">👋</span></h1>
                 <p class="intro-subtitle">iOS developer from 🇮🇳 India</p>
-                <div class="constellation-container">
-    <svg class="constellation-svg"></svg>
-    <div class="star" data-star-id="1" style="top: 30%; left: 15%;">
-        <span class="star-label">iOS Developer</span>
-    </div>
-    <div class="star" data-star-id="2" style="top: 65%; left: 35%;">
-        <span class="star-label">Author</span>
-    </div>
-    <div class="star" data-star-id="3" style="top: 25%; left: 60%;">
-        <span class="star-label">Based in Indore 🇮🇳</span>
-    </div>
-    <div class="star" data-star-id="4" style="top: 70%; left: 80%;">
-        <span class="star-label">Building a watch company</span>
-    </div>
-</div>
+                <p class="intro-bio">
+                    I'm a creative iOS developer specializing in UI design and crafting engaging user experiences with a
+                    little attention to detail.
+                </p>
                 <div class="intro-links">
                     <a href="#" class="text-link-button">
                         <i class="fa-solid fa-download"></i>
@@ -381,7 +370,6 @@
     <script src="js/experience.js"></script>
     <script src="js/theme.js"></script>
     <script src="js/guestbook.js" type="module"></script>
-    <script src="js/constellation.js"></script>
 
     <script src="https://kit.fontawesome.com/ab21585358.js" crossorigin="anonymous" defer></script>
 </body>
