--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/guestbook.css">
+        <link rel="stylesheet" href="styles/bookshelf.css">
 
         <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
             as="style">
@@ -281,6 +282,30 @@
             </div>
         </section>
 
+        <section class="bookshelf-section">
+            <div class="bookshelf">
+                <div class="shelf"></div>
+                
+                <div class="book">
+                    <div class="book-face book-front">
+                        <img src="https://m.media-amazon.com/images/I/71-3A+y+r7L._SY466_.jpg" alt="The Kala's Of Shri Krishna Cover">
+                    </div>
+                    <div class="book-face book-back">
+                        <h4>The Kala's Of Shri Krishna</h4>
+                        <p>A deep dive into the divine arts and attributes of Shri Krishna.</p>
+                        <a href="https://amzn.in/d/4KaZA9e" target="_blank">View on Amazon</a>
+                    </div>
+                    <div class="book-face book-spine">
+                        <span>Aadish Jain</span>
+                    </div>
+                </div>
+
+                </div>
+        </section>
+
+        <section class="skills-section">
+            </section>
+
         <section class="guestbook-section">
             <h2 class="section-header-title">guestbook</h2>
             <form id="guestbook-form" class="guestbook-form">
@@ -370,6 +395,7 @@
     <script src="js/experience.js"></script>
     <script src="js/theme.js"></script>
     <script src="js/guestbook.js" type="module"></script>
+    <script src="js/bookshelf.js"></script>
 
     <script src="https://kit.fontawesome.com/ab21585358.js" crossorigin="anonymous" defer></script>
 </body>
