--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 
                 <div class="book">
                     <div class="book-face book-front">
-                        <img src="https://m.media-amazon.com/images/I/71-3A+y+r7L._SY466_.jpg" alt="The Kala's Of Shri Krishna Cover">
+                        <img src="assets/cover.jpg" alt="The Kala's Of Shri Krishna Cover">
                     </div>
                     <div class="book-face book-back">
                         <h4>The Kala's Of Shri Krishna</h4>
