--- a/index.html
+++ b/index.html
@@ -299,6 +299,84 @@
                         <span>Aadish Jain</span>
                     </div>
                 </div>
+                <div class="book">
+                    <div class="book-face book-front">
+                        <img src="assets/cover.jpg" alt="The Kala's Of Shri Krishna Cover">
+                    </div>
+                    <div class="book-face book-back">
+                        <h4>The Kala's Of Shri Krishna</h4>
+                        <p>A deep dive into the divine arts and attributes of Shri Krishna.</p>
+                        <a href="https://amzn.in/d/4KaZA9e" target="_blank">View on Amazon</a>
+                    </div>
+                    <div class="book-face book-spine">
+                        <span>Aadish Jain</span>
+                    </div>
+                </div>
+                <div class="book">
+                    <div class="book-face book-front">
+                        <img src="assets/cover.jpg" alt="The Kala's Of Shri Krishna Cover">
+                    </div>
+                    <div class="book-face book-back">
+                        <h4>The Kala's Of Shri Krishna</h4>
+                        <p>A deep dive into the divine arts and attributes of Shri Krishna.</p>
+                        <a href="https://amzn.in/d/4KaZA9e" target="_blank">View on Amazon</a>
+                    </div>
+                    <div class="book-face book-spine">
+                        <span>Aadish Jain</span>
+                    </div>
+                </div>
+                <div class="book">
+                    <div class="book-face book-front">
+                        <img src="assets/cover.jpg" alt="The Kala's Of Shri Krishna Cover">
+                    </div>
+                    <div class="book-face book-back">
+                        <h4>The Kala's Of Shri Krishna</h4>
+                        <p>A deep dive into the divine arts and attributes of Shri Krishna.</p>
+                        <a href="https://amzn.in/d/4KaZA9e" target="_blank">View on Amazon</a>
+                    </div>
+                    <div class="book-face book-spine">
+                        <span>Aadish Jain</span>
+                    </div>
+                </div>
+                <div class="book">
+                    <div class="book-face book-front">
+                        <img src="assets/cover.jpg" alt="The Kala's Of Shri Krishna Cover">
+                    </div>
+                    <div class="book-face book-back">
+                        <h4>The Kala's Of Shri Krishna</h4>
+                        <p>A deep dive into the divine arts and attributes of Shri Krishna.</p>
+                        <a href="https://amzn.in/d/4KaZA9e" target="_blank">View on Amazon</a>
+                    </div>
+                    <div class="book-face book-spine">
+                        <span>Aadish Jain</span>
+                    </div>
+                </div>
+                <div class="book">
+                    <div class="book-face book-front">
+                        <img src="assets/cover.jpg" alt="The Kala's Of Shri Krishna Cover">
+                    </div>
+                    <div class="book-face book-back">
+                        <h4>The Kala's Of Shri Krishna</h4>
+                        <p>A deep dive into the divine arts and attributes of Shri Krishna.</p>
+                        <a href="https://amzn.in/d/4KaZA9e" target="_blank">View on Amazon</a>
+                    </div>
+                    <div class="book-face book-spine">
+                        <span>Aadish Jain</span>
+                    </div>
+                </div>
+                <div class="book">
+                    <div class="book-face book-front">
+                        <img src="assets/cover.jpg" alt="The Kala's Of Shri Krishna Cover">
+                    </div>
+                    <div class="book-face book-back">
+                        <h4>The Kala's Of Shri Krishna</h4>
+                        <p>A deep dive into the divine arts and attributes of Shri Krishna.</p>
+                        <a href="https://amzn.in/d/4KaZA9e" target="_blank">View on Amazon</a>
+                    </div>
+                    <div class="book-face book-spine">
+                        <span>Aadish Jain</span>
+                    </div>
+                </div>
 
                 </div>
         </section>
