--- a/index.html
+++ b/index.html
@@ -282,107 +282,46 @@
             </div>
         </section>
 
-        <section class="bookshelf-section">
-            <div class="bookshelf">
-                <div class="shelf"></div>
-                
-                <div class="book">
-                    <div class="book-face book-front">
-                        <img src="assets/cover.jpg" alt="The Kala's Of Shri Krishna Cover">
-                    </div>
-                    <div class="book-face book-back">
-                        <h4>The Kala's Of Shri Krishna</h4>
-                        <p>A deep dive into the divine arts and attributes of Shri Krishna.</p>
-                        <a href="https://amzn.in/d/4KaZA9e" target="_blank">View on Amazon</a>
-                    </div>
-                    <div class="book-face book-spine">
-                        <span>Aadish Jain</span>
-                    </div>
-                </div>
-                <div class="book">
-                    <div class="book-face book-front">
-                        <img src="assets/cover.jpg" alt="The Kala's Of Shri Krishna Cover">
-                    </div>
-                    <div class="book-face book-back">
-                        <h4>The Kala's Of Shri Krishna</h4>
-                        <p>A deep dive into the divine arts and attributes of Shri Krishna.</p>
-                        <a href="https://amzn.in/d/4KaZA9e" target="_blank">View on Amazon</a>
-                    </div>
-                    <div class="book-face book-spine">
-                        <span>Aadish Jain</span>
-                    </div>
-                </div>
-                <div class="book">
-                    <div class="book-face book-front">
-                        <img src="assets/cover.jpg" alt="The Kala's Of Shri Krishna Cover">
-                    </div>
-                    <div class="book-face book-back">
-                        <h4>The Kala's Of Shri Krishna</h4>
-                        <p>A deep dive into the divine arts and attributes of Shri Krishna.</p>
-                        <a href="https://amzn.in/d/4KaZA9e" target="_blank">View on Amazon</a>
-                    </div>
-                    <div class="book-face book-spine">
-                        <span>Aadish Jain</span>
-                    </div>
-                </div>
-                <div class="book">
-                    <div class="book-face book-front">
-                        <img src="assets/cover.jpg" alt="The Kala's Of Shri Krishna Cover">
-                    </div>
-                    <div class="book-face book-back">
-                        <h4>The Kala's Of Shri Krishna</h4>
-                        <p>A deep dive into the divine arts and attributes of Shri Krishna.</p>
-                        <a href="https://amzn.in/d/4KaZA9e" target="_blank">View on Amazon</a>
-                    </div>
-                    <div class="book-face book-spine">
-                        <span>Aadish Jain</span>
-                    </div>
-                </div>
-                <div class="book">
-                    <div class="book-face book-front">
-                        <img src="assets/cover.jpg" alt="The Kala's Of Shri Krishna Cover">
-                    </div>
-                    <div class="book-face book-back">
-                        <h4>The Kala's Of Shri Krishna</h4>
-                        <p>A deep dive into the divine arts and attributes of Shri Krishna.</p>
-                        <a href="https://amzn.in/d/4KaZA9e" target="_blank">View on Amazon</a>
-                    </div>
-                    <div class="book-face book-spine">
-                        <span>Aadish Jain</span>
-                    </div>
-                </div>
-                <div class="book">
-                    <div class="book-face book-front">
-                        <img src="assets/cover.jpg" alt="The Kala's Of Shri Krishna Cover">
-                    </div>
-                    <div class="book-face book-back">
-                        <h4>The Kala's Of Shri Krishna</h4>
-                        <p>A deep dive into the divine arts and attributes of Shri Krishna.</p>
-                        <a href="https://amzn.in/d/4KaZA9e" target="_blank">View on Amazon</a>
-                    </div>
-                    <div class="book-face book-spine">
-                        <span>Aadish Jain</span>
-                    </div>
-                </div>
-                <div class="book">
-                    <div class="book-face book-front">
-                        <img src="assets/cover.jpg" alt="The Kala's Of Shri Krishna Cover">
-                    </div>
-                    <div class="book-face book-back">
-                        <h4>The Kala's Of Shri Krishna</h4>
-                        <p>A deep dive into the divine arts and attributes of Shri Krishna.</p>
-                        <a href="https://amzn.in/d/4KaZA9e" target="_blank">View on Amazon</a>
-                    </div>
-                    <div class="book-face book-spine">
-                        <span>Aadish Jain</span>
-                    </div>
-                </div>
+        <div class="footer-widgets-container">
+        <div class="footer-widget live-status-widget">
+            <div class="status-indicator"></div>
+            <div class="widget-text">
+                <p class="widget-title">Local Time</p>
+                <p id="local-time" class="widget-value">--:--:-- --</p>
+            </div>
+            <div class="widget-divider"></div>
+            <div class="widget-text">
+                <p class="widget-title">Focus</p>
+                <p id="focus-status" class="widget-value">Building Cool Apps</p>
+            </div>
+        </div>
 
-                </div>
-        </section>
+        <div class="footer-widget book-recs-widget">
+            <p class="widget-title">Recommended Reading</p>
+            <div class="book-scroller">
+                <a href="#" target="_blank" class="book-cover" title="Book Title 1">
+                    <img src="https://via.placeholder.com/60x90" alt="Book Cover 1">
+                </a>
+                <a href="#" target="_blank" class="book-cover" title="Book Title 2">
+                    <img src="https://via.placeholder.com/60x90" alt="Book Cover 2">
+                </a>
+                <a href="#" target="_blank" class="book-cover" title="Book Title 3">
+                    <img src="https://via.placeholder.com/60x90" alt="Book Cover 3">
+                </a>
+                <a href="#" target="_blank" class="book-cover" title="Book Title 4">
+                    <img src="https://via.placeholder.com/60x90" alt="Book Cover 4">
+                </a>
+                <a href="#" target="_blank" class="book-cover" title="Book Title 5">
+                    <img src="https://via.placeholder.com/60x90" alt="Book Cover 5">
+                </a>
+            </div>
+        </div>
+    </div>
 
-        <section class="skills-section">
-            </section>
+
+    <script src="js/footer-widgets.js"></script>
+
+    </body>
 
         <section class="guestbook-section">
             <h2 class="section-header-title">guestbook</h2>
