--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
 
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/guestbook.css">
-        <link rel="stylesheet" href="styles/bookshelf.css">
+        <link rel="stylesheet" href="styles/live-activity.css">
+
+<link rel="stylesheet" href="styles/footer-widgets.css">
 
         <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
             as="style">
