--- a/index.html
+++ b/index.html
@@ -284,37 +284,46 @@
             </div>
         </section>
 
-<section class="info-grid-section">
-            <div class="info-grid">
+
+        <section class="showcase-section">
+            <div class="live-info-column">
                 <div class="info-card">
                     <h3>Live Status</h3>
                     <div class="live-status-item">
-                        <p class="status-title">Local Time</p>
                         <p id="live-time" class="status-value">--:-- --</p>
                     </div>
                     <div class="live-status-item">
-                        <p class="status-title">Focus</p>
                         <p id="live-focus" class="status-value">Building Cool Apps</p>
                     </div>
                 </div>
+            </div>
 
-                <div class="info-card">
-                    <h3>Recommended Reading</h3>
-                    <div class="book-list">
-                        <a href="https://www.amazon.in/dp/0061122416" target="_blank" class="book-item">
-                            <img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1654371463l/18144590.jpg" alt="The Alchemist">
-                            <p>The Alchemist by Paulo Coelho</p>
-                        </a>
-                        <a href="https://www.amazon.in/dp/1400034779" target="_blank" class="book-item">
-                            <img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1587157873l/53346452.jpg" alt="The Prophet">
-                            <p>The Prophet by Kahlil Gibran</p>
-                        </a>
+            <div class="bookshelf-column">
+                <div class="bookshelf">
+                    <div class="shelf"></div>
+                    <div class="book">
+                        <div class="book-face book-front">
+                            <img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1654371463l/18144590.jpg" alt="The Alchemist Cover">
                         </div>
-                </div>
+                        <div class="book-face book-back">
+                            <h4>The Alchemist</h4>
+                            <a href="https://www.amazon.in/dp/0061122416" target="_blank">View</a>
+                        </div>
+                        <div class="book-face book-spine"></div>
+                    </div>
+                    <div class="book">
+                        <div class="book-face book-front">
+                            <img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1587157873l/53346452.jpg" alt="The Prophet Cover">
+                        </div>
+                        <div class="book-face book-back">
+                            <h4>The Prophet</h4>
+                            <a href="https://www.amazon.in/dp/1400034779" target="_blank">View</a>
+                        </div>
+                        <div class="book-face book-spine"></div>
+                    </div>
+                    </div>
             </div>
         </section>
-
-    </body>
 
         <section class="guestbook-section">
             <h2 class="section-header-title">guestbook</h2>
