--- a/index.html
+++ b/index.html
@@ -284,17 +284,15 @@
             </div>
         </section>
 
-
         <section class="showcase-section">
             <div class="live-info-column">
                 <div class="info-card">
                     <h3>Live Status</h3>
-                    <div class="live-status-item">
-                        <p id="live-time" class="status-value">--:-- --</p>
-                    </div>
-                    <div class="live-status-item">
-                        <p id="live-focus" class="status-value">Building Cool Apps</p>
-                    </div>
+                    <p id="live-time" class="info-value">--:-- --</p>
+                </div>
+                <div class="info-card">
+                    <h3>Current Focus</h3>
+                    <p id="live-focus" class="info-value">Building Cool Apps</p>
                 </div>
             </div>
 
@@ -303,6 +301,16 @@
                     <div class="shelf"></div>
                     <div class="book">
                         <div class="book-face book-front">
+                            <img src="https://m.media-amazon.com/images/I/71-3A+y+r7L._SY466_.jpg" alt="Book Cover">
+                        </div>
+                        <div class="book-face book-back">
+                            <h4>The Kala's Of Shri Krishna</h4>
+                            <a href="https://amzn.in/d/4KaZA9e" target="_blank">View</a>
+                        </div>
+                        <div class="book-face book-spine"></div>
+                    </div>
+                    <div class="book" style="transform: rotateY(-25deg); margin-left: -20px;">
+                         <div class="book-face book-front">
                             <img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1654371463l/18144590.jpg" alt="The Alchemist Cover">
                         </div>
                         <div class="book-face book-back">
@@ -311,17 +319,7 @@
                         </div>
                         <div class="book-face book-spine"></div>
                     </div>
-                    <div class="book">
-                        <div class="book-face book-front">
-                            <img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1587157873l/53346452.jpg" alt="The Prophet Cover">
-                        </div>
-                        <div class="book-face book-back">
-                            <h4>The Prophet</h4>
-                            <a href="https://www.amazon.in/dp/1400034779" target="_blank">View</a>
-                        </div>
-                        <div class="book-face book-spine"></div>
-                    </div>
-                    </div>
+                </div>
             </div>
         </section>
 
