--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div class="page-wrapper">
     <div class="dynamic-island" id="dynamic-island">
         <div class="initial-content">
             <div class="left">
@@ -43,6 +44,7 @@
         </div>
     </main>
     <script src="js/blog.js" type="module"></script>
+    </div>
 </body>
 
 </html>
