--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 </head>
 
 <body>
+    <div class="page-wrapper">
 
     <div class="dynamic-island" id="dynamic-island">
         <div class="initial-content">
@@ -419,7 +420,7 @@
         loadProjects();
         loadPosts();
     </script>
-
+</div>
 </body>
 
 </html>
