--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+<div class="page-wrapper">
     <div class="dynamic-island" id="dynamic-island">
         <div class="initial-content">
             <div class="left">
@@ -46,7 +46,7 @@
     </main>
 
     <script src="js/projects.js" type="module"></script>
-
+</div>
 </body>
 
 </html>
