--- a/reviews.html
+++ b/reviews.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+<div class="page-wrapper">
     <div class="dynamic-island" id="dynamic-island">
         <div class="initial-content">
             <div class="left">
@@ -68,7 +68,7 @@
     </div>
 
     <script src="js/reviews.js" type="module"></script>
-
+</div>
 </body>
 
 </html>
