--- a/blog.html
+++ b/blog.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"><meta name="viewport" content="width=460">
     <title>Blog | Aadish Jain</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/blog.css">
