--- a/reviews.html
+++ b/reviews.html
@@ -11,64 +11,113 @@
 </head>
 
 <body>
-<div class="page-wrapper">
-    <div class="dynamic-island" id="dynamic-island">
-        <div class="initial-content">
-            <div class="left">
-                <img src="assets/aadishjain.webp" alt="Profile" class="profile-pic">
+    <div class="page-wrapper">
+        <div class="dynamic-island" id="dynamic-island">
+            <div class="initial-content">
+                <div class="left">
+                    <img src="assets/aadishjain.webp" alt="Profile" class="profile-pic">
+                </div>
+            </div>
+            <div class="expanded-content" id="review-submitted-prompt">
+                <p>Thank you for your review!</p>
             </div>
         </div>
-        <div class="expanded-content" id="review-submitted-prompt">
-            <p>Thank you for your review!</p>
+
+        <nav class="main-nav">
+            <div class="header-nav left-nav">
+                <a href="index.html">Home</a>
+                <a href="blog.html">Blog</a>
+                <a href="projects.html">Projects</a>
+            </div>
+            <div class="header-nav right-nav">
+                <a href="https://github.com/aadishhere" target="_blank" aria-label="GitHub"><i
+                        class="fa-brands fa-github"></i></a>
+                <a href="https://linkedin.com/in/aadishhere" target="_blank" aria-label="LinkedIn"><i
+                        class="fa-brands fa-linkedin"></i></a>
+                <a href="https://instagram.com/aadishhere" target="_blank" aria-label="Instagram"><i
+                        class="fa-brands fa-instagram"></i></a>
+                <i class="fa-regular fa-moon theme-icon"></i>
+            </div>
+        </nav>
+
+        <div class="review-page-wrapper">
+            <div class="form-container">
+                <h1>Leave a Review</h1>
+                <p>Share your thoughts about my portfolio. Your feedback is greatly appreciated!</p>
+                <form id="review-form">
+                    <div class="form-group">
+                        <label for="name">Your Name</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Your Email</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" rows="5" required></textarea>
+                    </div>
+                    <button type="submit" class="submit-btn">Submit Review</button>
+                </form>
+                <p id="form-message"></p>
+            </div>
+
+            <div id="reviews-container">
+                <h2>What Others Are Saying</h2>
+            </div>
         </div>
+        <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "mainEntity": {
+    "@type": "Person",
+    "name": "Aadish Jain",
+    "url": "https://www.aadishjain.com",
+    "image": {
+      "@type": "ImageObject",
+      "url": "https://www.aadishjain.com/assets/aadishjain.webp",
+      "height": "300",
+      "width": "300"
+    },
+    "jobTitle": "Writer, Author, Poet, Software Engineer, iOS Developer",
+    "description": Aadish Jain is a writer from Indore and a engineer with a passion for iOS development and building innovative products. He’s also working toward launching his own watch company.",
+    "nationality": "Indian",
+    "knowsLanguage": ["English", "Hindi"],
+    "alumniOf": {
+      "@type": "CollegeOrUniversity",
+      "name": "IPS Academy, Institute of Engineering and Science",
+      "sameAs": "https://ies.ipsacademy.org"
+    },
+    "sameAs": [
+      "https://github.com/aadishhere",
+      "https://linkedin.com/in/aadishhere",
+      "https://instagram.com/aadishhere",
+      "https://www.amazon.in/stores/author/B0BV14D8KJ",
+      "https://www.imdb.com/name/nm14537099/bio/",
+      "https://share.google/HcbRcRpbVGjru4HNi".
+        "https://amzn.in/d/7pCtNLN",
+        "https://www.youtube.com/@aadishhere",
+        "https://www.goodreads.com/author/list/29745669.Aadish_Jain"
+    ],
+    "knowsAbout": [
+      "Poetry", "Writing", "iOS Developement", "iOS App", "Spirituality", 
+      "Song Writing", "App Development", "Indore", "Software Engineer"
+    ],
+    "publication": [
+      {
+        "@type": "Book",
+        "name": "The Kala's Of Shri Krishna",
+        "author": { "@type": "Person", "name": "Aadish Jain" },
+        "url": "https://amzn.in/d/4KaZA9e",
+        "isbn": "B0C5VY39KR"
+      }
+    ]
+  }
+}
+    </script>
+        <script src="js/reviews.js" type="module"></script>
     </div>
-
-    <nav class="main-nav">
-        <div class="header-nav left-nav">
-            <a href="index.html">Home</a>
-            <a href="blog.html">Blog</a>
-            <a href="projects.html">Projects</a>
-        </div>
-        <div class="header-nav right-nav">
-            <a href="https://github.com/aadishhere" target="_blank" aria-label="GitHub"><i
-                    class="fa-brands fa-github"></i></a>
-            <a href="https://linkedin.com/in/aadishhere" target="_blank" aria-label="LinkedIn"><i
-                    class="fa-brands fa-linkedin"></i></a>
-            <a href="https://instagram.com/aadishhere" target="_blank" aria-label="Instagram"><i
-                    class="fa-brands fa-instagram"></i></a>
-            <i class="fa-regular fa-moon theme-icon"></i>
-        </div>
-    </nav>
-
-    <div class="review-page-wrapper">
-        <div class="form-container">
-            <h1>Leave a Review</h1>
-            <p>Share your thoughts about my portfolio. Your feedback is greatly appreciated!</p>
-            <form id="review-form">
-                <div class="form-group">
-                    <label for="name">Your Name</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Your Email</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" rows="5" required></textarea>
-                </div>
-                <button type="submit" class="submit-btn">Submit Review</button>
-            </form>
-            <p id="form-message"></p>
-        </div>
-
-        <div id="reviews-container">
-            <h2>What Others Are Saying</h2>
-        </div>
-    </div>
-
-    <script src="js/reviews.js" type="module"></script>
-</div>
 </body>
 
 </html>
