--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 }
     </script>
 
-
+    <link rel="preload" fetchpriority="high" as="image" href="assets/aadishjain.webp" type="image/webp">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
