--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             <p>© 2025 Aadish Jain</p>
         </footer>
 
-        <script src="js/script.js"></script>
+        <script src="js/script.js" defer></script>
 
         <script type="module">
             import { initializeApp, getApps } from "https://www.gstatic.com/firebasejs/9.6.7/firebase-app.js";
