--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
       "width": "300"
     },
     "jobTitle": "Writer, Author, Poet, Software Engineer, iOS Developer",
-    "description": Aadish Jain is a writer from Indore and a engineer with a passion for iOS development and building innovative products. He’s also working toward launching his own watch company.",
+    "description": "Aadish Jain is a writer from Indore and a engineer with a passion for iOS development and building innovative products. He’s also working toward launching his own watch company.",
     "nationality": "Indian",
     "knowsLanguage": ["English", "Hindi"],
     "alumniOf": {
