--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <div class="widget widget-1x1 widget-row-layout">
                             <a href="mailto:aadishhere@gmail.com" class="info-button">
                                 <i class="fa-solid fa-envelope"></i>
-                                <span>email me</span>
+                                <span>email</span>
                             </a>
                         </div>
                     </div>
